@@ -86,7 +86,9 @@ Container.updateOrder('element_<% $id %>');
 %   }
 %   }
 
+% if (get_pref('Show Bulk Edit')) {
 <span style="cursor: pointer;" id="<% $top_level ? 'bulk_edit_this_cb' : 'bulk_edit_' . $id %>" onclick="customSubmit('theForm','<% $top_level ? 'container_prof|bulk_edit_this_cb' : 'container_prof|bulk_edit_cb' %>','<% $id %>')" > <img src="/media/images/bulk-edit.png" alt="Bulk Edit" />Bulk Edit</span>
+% }
 </div>
 % unless ($top_level) {
 </fieldset>
